Version 2.0 + rework